Initial StoreKit setup

--- a/Kindred.xcodeproj/xcshareddata/xcschemes/Kindred.xcscheme
+++ b/Kindred.xcodeproj/xcshareddata/xcschemes/Kindred.xcscheme
@@ -70,6 +70,9 @@
             ReferencedContainer = "container:Kindred.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../Kindred/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
