Get. Cloud sync. Working.

--- a/Kindred/Info.plist
+++ b/Kindred/Info.plist
@@ -50,5 +50,17 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+  <key>NSUbiquitousContainers</key>
+  <dict>
+    <key>iCloud.com.tiltowait.Kindred</key>
+    <dict>
+      <key>NSUbiquitousContainerIsDocumentScopePublic</key>
+      <true/>
+      <key>NSUbiquitousContainerName</key>
+      <string>Kindred</string>
+      <key>NSUbiquitousContainerSupportedFolderLevels</key>
+      <string>Any</string>
+    </dict>
+  </dict>
 </dict>
 </plist>
