--- a/Kindred/Kindred.entitlements
+++ b/Kindred/Kindred.entitlements
@@ -10,11 +10,7 @@
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
-		<string>CloudDocuments</string>
-	</array>
-	<key>com.apple.developer.ubiquity-container-identifiers</key>
-	<array>
-		<string>iCloud.com.tiltowait.Kindred</string>
+		<string>CloudKit</string>
 	</array>
 </dict>
 </plist>
